--- a/app/templates/chat/room.html
+++ b/app/templates/chat/room.html
@@ -13,6 +13,7 @@
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
   const roomId = {{ room_id }};
+  const userId = {{ current_user.id }};
   const socket = io();
   socket.emit('join_room', {room: roomId});
 
@@ -36,7 +37,7 @@
     e.preventDefault();
     const text = document.getElementById('message-input').value;
     if (text) {
-      socket.emit('send_message', {room_id: roomId, user_id: 1, message: text});
+      socket.emit('send_message', {room_id: roomId, user_id: userId, message: text});
       document.getElementById('message-input').value = '';
     }
   });
