--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">schlauDorf</a>
+        <div class="navbar-nav">
+          <a class="nav-link" href="{{ url_for('main.news_list') }}">News</a>
+          <a class="nav-link" href="{{ url_for('main.events_list') }}">Events</a>
+        </div>
       </div>
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %}
